[tool.poetry]
name = "pydevto"
version = "0.1.3"
description = "Unofficial dev.to api for python"
readme = "README.md"
repository = "https://github.com/lpellis/pydevto"
license = "MIT"
authors = ["'Loftie <lpellis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
beautifulsoup4 = "^4.8"
six = "^1.12"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
